public/v/release-4.0/_sources/concepts/stereo_depth/ess/visualize_image.rst.txt
Instructions to Generate Disparity Maps for Stereo Images
=========================================================

These are instructions for generating a disparity map for a given stereo
image pair.

The ``isaac_ros_ess_visualizer.py`` script supports:

* rosbag input type
* Raw input images
* Camera info files


To generate a disparity estimation from raw inputs:

1. Complete the :ref:`Quickstart <repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_ess/index:quickstart>` guide.

2. Launch the ESS Disparity Node using one of the following options:

     To run ESS at a threshold of 0.3 run:

     .. code:: bash

       ros2 launch isaac_ros_ess isaac_ros_ess.launch.py engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/dnn_stereo_disparity/dnn_stereo_disparity_v4.1.0_onnx_trt10.13/ess.engine threshold:=0.3

     To run ESS at a threshold of 0.0 run:

     .. code:: bash

       ros2 launch isaac_ros_ess isaac_ros_ess.launch.py engine_file_path:=${ISAAC_ROS_WS}/isaac_ros_assets/models/dnn_stereo_disparity/dnn_stereo_disparity_v4.1.0_onnx_trt10.13/ess.engine threshold:=0.0

3. Visualize and validate the output of the package:

   .. code:: bash

      ros2 run isaac_ros_ess isaac_ros_ess_visualizer.py --raw_inputs


   With threshold set to 0.4, you should see:

   .. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/stereo_depth/ess/ess4.1_output_threshold.0.4.png>`
      :align: center

   With threshold set to 0.0, you should see:

   .. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/stereo_depth/ess/ess4.1_output_threshold.0.0.png>`
      :align: center

4. Try your own examples:

   .. code:: bash

      ros2 run isaac_ros_ess isaac_ros_ess_visualizer.py --raw_inputs \
              --left_image_path '<Absolute path to your left image>' \
              --right_image_path '<Absolute path to your right image>' \
              --camera_info_path '<Absolute path your camera info json file>'
